--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBlack">#080808</color>
     <color name="colorGray">#CCCCCC</color>
     <color name="colorFacebook">#3b5998</color>
+    <color name="colorBlueLigth">#03a9f4</color>
 </resources>
