--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,6 +9,15 @@
 
     <include layout="@layout/toolbar" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:indeterminate="true"
+        android:visibility="invisible" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,7 +25,7 @@
         <!-- TODO: Update blank fragment layout -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="top|center"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -37,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0.4"
+                    android:layout_weight="0.3"
                     android:src="@drawable/logo_fptc" />
 
                 <TextView
@@ -46,10 +55,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"
-                    android:layout_weight="0.6"
+                    android:layout_weight="0.7"
                     android:text="user@user.com"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                    android:textSize="17sp"
+                    android:textSize="15sp"
                     android:textColor="@color/colorPrimary" />
             </LinearLayout>
 
@@ -99,8 +108,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="false"
                         android:hint="@string/age"
-                        android:inputType="number"
-                        android:textStyle="bold" />
+                        android:inputType="number"/>
 
                 </android.support.design.widget.TextInputLayout>
 
