--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,7 +27,7 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.3"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo_fptc" />
 
         <LinearLayout
             android:layout_width="match_parent"
