--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -28,7 +28,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
             android:layout_weight="0.3"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo_fptc" />
 
         <LinearLayout
             android:layout_width="match_parent"
