se guarda latitud y longitud en base de datos

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -146,6 +146,18 @@
                             android:inputType="textPostalAddress" />
                     </android.support.design.widget.TextInputLayout>
 
+                    <EditText
+                        android:id="@+id/mainProfileTxtLongitude"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone"/>
+
+                    <EditText
+                        android:id="@+id/mainProfileTxtLatitude"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone"/>
+
                     <ImageButton
                         android:id="@+id/btnmaps"
                         android:layout_width="wrap_content"
