ajuste de stilos, cambio de idioma textos de error de auth, ajuste de icono menu, validación onbackpresse maps, ajuste para guardado de lat y lng

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/status_bar_height_kitkat"
+            android:layout_height="@dimen/status_bar_height"
             android:background="?colorPrimary" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/status_bar_height_lollipop"
-            android:background="?colorPrimaryDark" />
 
     </LinearLayout>
 
