--- a/app/src/main/res/values-v21/attrs.xml
+++ b/app/src/main/res/values-v21/attrs.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="fitsSystemWindows">false</bool>
+    <bool name="fitsSystemWindows">true</bool>
     <dimen name="navigation_drawer_header_margin">41dp</dimen>
     <dimen name="status_bar_height">25dp</dimen>
-    <dimen name="status_bar_height_kitkat">0dp</dimen>
-    <dimen name="status_bar_height_lollipop">25dp</dimen>
+
 </resources>
