--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -11,23 +11,31 @@
         android:orientation="vertical"
         android:weightSum="1">
 
+        <ImageView
+            android:id="@+id/mainIntroImage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            android:src="@drawable/cancer_cervix"
+             android:layout_marginTop="-12dp"/>
+
         <TextView
             android:id="@+id/mainIntroTxt"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.6"
             android:text="Hola bienvenido al portal, sabias que el cancer de mama..., ahora contastaras un cuestionario"
             android:layout_marginTop="5dp"
             android:textSize="25sp"
             android:padding="15dp"/>
 
-        <Button
-            android:id="@+id/mainIntroBtnGo"
-            style="@style/BtnIntro"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:text="Vamos a contestar"
-            />
     </LinearLayout>
+    <Button
+        android:id="@+id/mainIntroBtnGo"
+        style="@style/BtnIntro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Vamos a contestar"
+        android:layout_gravity="bottom"
+        />
 </FrameLayout>
