ajustes para mortrar las preguntas

--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -56,11 +56,11 @@
         android:layout_marginTop="10dp"
         android:textSize="20sp"/>
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/mainQuestionSpinnerAnswer"
-        android:visibility="visible"
-        android:layout_marginTop="10dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="10dp"
+       />
 
 </LinearLayout>
