--- a/app/src/main/res/drawable/progressbar_states.xml
+++ b/app/src/main/res/drawable/progressbar_states.xml
@@ -5,18 +5,18 @@
         <solid android:color="@color/colorPrimaryText"/>
         <stroke android:width="1dip" android:color="@color/colorBlueLigth" />
         <corners
-            android:bottomRightRadius="10dp"
-            android:topRightRadius="10dp"
+            android:bottomLeftRadius="10dp"
+            android:topLeftRadius="10dp"
             />
     </shape>
 </item>
 <item android:id="@android:id/progress">
     <clip>
         <shape >
-            <solid android:color="@color/com_facebook_blue"/>
+            <solid android:color="@color/colorBlueLigth"/>
             <corners
-                android:bottomRightRadius="10dp"
-                android:topRightRadius="10dp"
+                android:bottomLeftRadius="10dp"
+                android:topLeftRadius="10dp"
                 />
         </shape>
     </clip>
