--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,6 +11,9 @@
 
     <style name="BtnPpal" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_margin">10dp</item>
     </style>
 
 </resources>
