--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,8 +52,7 @@
     </style>
 
     <style name="FacebookLoginButton" parent="BtnPpal">
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:background">@color/colorFacebook</item>
+        <item name="android:background">@drawable/rounded_button_facebook</item>
         <item name="android:paddingTop">11dp</item>
         <item name="android:paddingBottom">11dp</item>
     </style>
